Body changed to 100vh to prevent scroll on mobile menu

--- a/Medinet_Consults/css/primary.css
+++ b/Medinet_Consults/css/primary.css
@@ -3,7 +3,7 @@ html, body{
 	overflow-x: hidden;
 }
 body{
-	height: 100%;
+	height: 100vh;
 	position: relative;
 }
 #wrapper{
